# duet-haskell

./: LICENSE  README.md  duet-game.cabal  stack.yaml
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Board.hs  Score.hs
tests/: Test.hs
