name:                duet-game
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Model.Board
  Default-Extensions: OverloadedStrings
  build-depends:       base,
                       parsec, 
                       containers, 
                       QuickCheck,
                       mtl,
                       brick,
                       vty
  hs-source-dirs:      src
  default-language:    Haskell2010

executable duet-game
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process,
                     containers, 
                     filepath,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck,
                     HUnit,
                     duet-game
